WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52187
WebPageProxy::creationParameters no longer needs to take a size
https://bugs.webkit.org/show_bug.cgi?id=52187
Summary
WebPageProxy::creationParameters no longer needs to take a size
Anders Carlsson
Reported
2011-01-10 18:43:12 PST
WebPageProxy::creationParameters no longer needs to take a size
Attachments
Patch
(4.11 KB, patch)
2011-01-10 18:44 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-01-10 18:44:33 PST
Created
attachment 78488
[details]
Patch
Anders Carlsson
Comment 2
2011-01-10 18:49:54 PST
Committed
r75465
: <
http://trac.webkit.org/changeset/75465
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug