2011-01-10  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        WebPageProxy::creationParameters no longer needs to take a size
        https://bugs.webkit.org/show_bug.cgi?id=52187

        WebPageProxy::creationParameters can just ask the page client for the view size now.

        * UIProcess/WebInspectorProxy.cpp:
        (WebKit::WebInspectorProxy::createInspectorPage):
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::initializeWebPage):
        (WebKit::WebPageProxy::reinitializeWebPage):
        (WebKit::WebPageProxy::createNewPage):
        (WebKit::WebPageProxy::creationParameters):
        * UIProcess/WebPageProxy.h:


Canonical link: https://commits.webkit.org/65762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75465 268f45cc-cd09-0410-ab3c-d52691b4dbfc